Sweetened up tree node ripple color - FRESH! Fixed overlapping expand / collapse indicators

--- a/libk/assets/css/create-rext-app-html/main.css
+++ b/libk/assets/css/create-rext-app-html/main.css
@@ -454,3 +454,7 @@ input {
 .product-menu-btn-wrap .ripple-obj {
     fill : rgba(255, 255, 255, 0.26);
 }
+
+.tree-node .ripple-obj {
+    fill : #8cc1da;
+}
